k8s/platform/components/security/external-secrets/external-secret-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: eso-zero-trust
  namespace: security
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
  policyTypes:
    - Egress
  egress:
    # ESO solo habla con Vault para pedir secretos
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: secrets-manager
          podSelector:
            matchLabels:
              app.kubernetes.io/name: vault
      ports:
        - port: 8200
